# CallbackWorkerThread

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md
.cursor/rules/: my-cplus-plus-rule.mdc
cmake/: CallbackWorkerThreadConfig.cmake.in
examples/: c_example.c  simple_example.cpp
include/callback_worker_thread/: callback_worker_thread.h  callback_worker_thread_c.h
src/: callback_worker_thread.cpp  callback_worker_thread_c.cpp
tests/: test_callback_worker_thread.cpp  test_callback_worker_thread_c.c
